---
title: Art-i-Fact
---
classDiagram
    Post o-- Label    
    RegisteredUser *-- Profile
    User <|-- RegisteredUser
    User <|-- GuestUser
    User <|-- Administrator
    RegisteredUser *-- Collection
    RegisteredUser *-- Feed
    Post *-- Comment

    User : -String username
    User: +User(username)
    User: +seePost()
    User: +getUser()
    User: +setUser(username)
    User: +seeComments(postID)
    User: +seeLikes(postID)
    User: +search(keyword)
    class RegisteredUser{
        -String e-mail
        -String password
        -String sign-up-date
        -bool is_suspended
        +RegisteredUser(eMail: String, password: String, signUpDate: String, suspended: bool)
        +getEMail(username: String) String
        +setEMail(username: String, eMail: String)
        +setPassword(username: String, password: String)
        +getSignUpDate(username: String) String
        +getSuspended(username: String) bool
        +setSuspended(username: String, suspended: bool)
        +logout()
        +classify()
        +followUser(user: RegisteredUser)
        +changePassword(oldPassword: string, newPassword: string)
    }
    class GuestUser{
        +register(username: string, e-mail: string, password: string)
        +login(username: string, password: string)
    }
    class Administrator{
        -String sign-up-date
        -String e-mail
        -String password
        +Administrator(signUpDate: String, eMail: String, password: String)
        +getSignUpDate(username: String) String
        +setSignUpDate(username: String, signUpDate: String)
        +getEMail(username: String) String
        +setEMail(username: String, e-mail: String)
        +getPassword(username: String) String
        +setPassword(username: String, password: String)
        +sendNotifications(notification: Notification)
        +createLabel(label: Label)
        +deleteLabel(label: Label)
        +classify()
        +sendNotification(notification: Notification)
        +suspendUser(username: string, suspendionDate: string)
    }
    class Post{
        -int postID
        -int numberOfLikes
        -List~Comment~ comments
        -List~Label~ labels
        -String title
        -String content
        +Post(username: String, title: String, content: String, labels: List~Label~)
        +getPostID() int
        +setPostID(postID: int)
        +getNumberOfLikes(postID) int
        +setNumberOfLikes(postID: int, numberOfLikes: int)
        +getComments(postID) List~Comment~ 
        +setComments(postID: int, Comments: List~Comment~)
        +getLabels(postID) List~Label~ 
        +setLabels(postID: int, labels: List~Label~)
        +getTitle(postID) String
        +setTitle(postID: int, title: String)
        +getContent(postID) String
        +setContent(postID: int, content: String)
        +delete()
    }
    class Label{
        -String name
        -String type
        -int labelID
        +Label(name: String, type: String)
        +getlabelID() int
        +setlabelID(labelID: int)
        +getName(labelID: int) String
        +setName(labelID: int, name: String)
        +getType(labelID: int) String
        +setType(labelID: int, type: String)
    }    
    class Collection{
        -int collectionID
        -List~Post~ listOfPosts
        -RegisteredUser ownerUser
        -Collection(listOfPosts: List~Post~, ownerUser: RegisteredUser)
        +getCollectionID() int
        +setCollectionID(collectionID: int)
        +getUser(collectionID: int) RegisteredUser
        +setUser(collectionID: int, ownerUser: RegisteredUser)
        +getListOfPosts(collectionID: int) int
        +setListOfPosts(collectionID: int, listOfPosts:List~Post~)
    }
    class Notification{
        -int notificationID
        -String content
        +Notification(content: String)
        +getNotificationID() int
        +setNotificationID(notificationID: int)
        +getContent(notificationID: int) String
        +setContent(notificationID: int, content: String)
    }
    class Comment{
        -int commentID
        -String content
        -Post post
        -int howManyLikes
        +Comment(post: Post, content: String, howManyLikes: int)
        +getCommentID() int
        +setCommentID(commentID: int, commentID: int)
        +getContent(commentID: int) String
        +setContent(commentID: int, content: String)
        +getPost(commentID: int) Post
        +setPost(commentID: int, post: Post)
        +getHowManyLikes(commentID: int) int
        +setHowManyLikes(commentID: int, howManyLikes: int)
    }
    class Feed{
        -List~Post~ listOfPosts
        -RegisteredUser user
        +Feed(listOfPosts: List~Post~, user: RegisteredUser)
        +getPosts(user: RegisteredUser) List~Post~
    }
    class Profile{
        -List~Post~ posts
        -List~RegisteredUser~ followers
        -List~Comment~ comments
        -List~Collection~ collection
        -Profile(posts: List~Post~, followers: List~RegisteredUser~, comments: List~Comments~, collection: List~Collection~)
        -getPosts(username: String) List~Post~
        -setPosts(username: String, listOfPosts: List~Post~)
        -getFollowers(username: String) List~RegisteredUser~
        -setFollowers(username: String, listOfFollowers: List~RegisteredUser~)
        -getComments(username: String) List~Comment~
        -setComments(username: String, listOfComment: List~Comment~)
        -getCollections(username: String) List~Collection~
        -setCollections(username: String, listOfCollections: List~Collection~)
    }
    class Search{
        +search(query: String)
    }
